2006-09-02  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/utils.c, src/sci_cb.c, src/main.c:
   Fixed C89 variable declaration and two sign comparison warnings.


2006-09-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c, src/dialogs.c, src/prefs.c, src/callbacks.c,
   src/interface.c, geany.glade: Fixed some typos.
 * src/filetypes.c, src/highlighting.c, src/keybindings.c,
   src/sci_cb.c, data/filetypes.html, data/filetype_extensions.conf,
   src/callbacks.c, src/msgwindow.c:
   Split filetype PHP/HTML into PHP and HTML.


2006-09-01  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in, po/vi.po:
   Added Vietnamese translation (Thanks Clytie Siddall).
 * THANKS, src/about.c: Added translator credits.


2006-08-31  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/msgwindow.c, data/filetypes.ferite:
   Improved parsing compiler messages when using the ferite compiler.
   Added some primitives and improved compiler settings for Ferite.


2006-08-30  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in, src/callbacks.c, src/geany.h, src/main.c:
   Removed the whole FIFO code and replaced it with support for
   (Unix Domain) Sockets(including Windows support, but not yet done).
 * src/vte.c, src/callbacks.c, src/document.c:
   Change the current working directory within the VTE also when a new
   file is saved.


2006-08-29  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sci_cb.c: Added auto completion for LaTeX command "begin".


2006-08-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c: Fixed typo in a tooltip text.
 * THANKS, src/about.c: Added translator credits.
 * src/treeviews.c, src/utils.c:
   Fixed a crash when switching between several filetypes.


2006-08-27  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in, po/cs.po:
   Added Czech translation (Thanks Petr Messner).


2006-08-27  Enrico Tröger  <enrico.troeger@uvena.de>
